# ros_tutorial

./: .gitignore  CMakeLists.txt  README.md  client.cpp  server.cpp
src/ros_tutorial/: CMakeLists.txt  package.xml  setup.py
src/ros_tutorial/scripts/: client.py  listener.py  server.py  talker.py
src/ros_tutorial/src/: client.cpp  publisher.cpp  server.cpp  subscriber.cpp
src/ros_tutorial/srv/: get_coordinates.srv
src/ros_tutorial/test/: pytest.py
